Upgrade Akka libraries, add DDL, adapted Akka Management.
- Corrected Akka Management dependencies.
- Changed StorageClass provider from Docker Desktop to Minikube.
- Added some minikube convenience scripts.
- Added cassandra snapshot keyspace and tables DDL.
- Made `ClusterBootstrap` to start programmatically.
- Fixed Akka management port conflicting on 8558 when starting app on same local host.
- Removed deprecated `passivate-idle-entity-after`.
- Corrected documentation.
- Upgraded sbt-native-packager plugin

Important Notes:
- `docker-compose.yml` not working yet
- config `datastax-java-driver.contact-points` should probably be just env var `CONTACT_POINTS1`
- App works when run with JVMs locally and with Cassandra locally, but in Kubernetes it no longer connects to Cassandra. I will try to fix that next.